--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,4 +2,14 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "variables", "base", "layout", "syntax-highlighting"
+
+@import "purecss/pure-min";
+@import "purecss/grids-responsive-min";
+@import "base/variables";
+@import "base/global-styles";
+@import "base/mixins";
+@import "base/button-extensions";
+@import "styles/header";
+@import "styles/footer";
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
