--- a/_assets/_css/base/global-styles.scss
+++ b/_assets/_css/base/global-styles.scss
@@ -1,5 +1,5 @@
 
-html, body, header, footer, h1, h2, h3, h4, h5, h6, ul, li, p {
+html, body, header, footer, h1, h2, h3, h4, h5, h6, p {
   padding: 0px;
   margin: 0px;
 }
@@ -7,6 +7,15 @@ html, body, header, footer, h1, h2, h3, h4, h5, h6, ul, li, p {
 body {
   color: $default-text-color;
   margin-bottom: 15px;
+}
+
+code {
+  @include border-radius(3px);
+  padding: 6px 12px;
+  margin: 6px;
+  background-color: #f0f0f0;
+  font-size: 0.8em;
+  display: block;
 }
 
 hr {
